src/objects/ADvendio__FeatureSetting__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__FeatureName__c</fullName>
        <label>Feature Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__TemplateName__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Feature Setting</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__FeatureName__c</columns>
        <columns>ADvendio__TemplateName__c</columns>
        <columns>ADvendio__Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__All1</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__FeatureName__c</columns>
        <columns>ADvendio__TemplateName__c</columns>
        <columns>ADvendio__Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__Finance</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__TemplateName__c</columns>
        <columns>ADvendio__Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__FeatureName__c</field>
            <operation>equals</operation>
            <value>Finance</value>
        </filters>
        <label>Finance</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GenericClone</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__FeatureName__c</columns>
        <columns>ADvendio__TemplateName__c</columns>
        <columns>ADvendio__Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__FeatureName__c</field>
            <operation>startsWith</operation>
            <value>GenericClone</value>
        </filters>
        <label>GenericClone</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Feature Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>